--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </body>
 <footer>
 <div id="foot">
-    <div class="gi1">Company A/S</div>
+    <div class="gi1">Compan A/S</div>
     <div class="gi2">Phone: &nbsp; +45 10 00 00 00</div>
     <div class="gi3">Mail: &nbsp; &nbsp; &nbsp; info@site.dk</div>
     <div class="gi4">CVR: &nbsp; &nbsp; &nbsp; 36584345</div>
