--- a/index.html
+++ b/index.html
@@ -3,33 +3,36 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Daniel Aagaard</title>
+    <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="main.js"></script>
 </head>
-<body>
-    <div class="grid-1">
-        <div id="liner"> <marquee> ( う-´)づ︻╦̵̵̿╤──  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; \(˚☐˚”)/  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ( ͡° ͜ʖ ͡°) </marquee> </div>
-        <a href="index.html" class="grid-item" id="title">Daniel Aagaard</a>
-        <a href="twitch.html" class="grid-item" id="nav1">Twitch</a>
-        <a href="WW.html" class="grid-item" id="nav2">Web Viewer</a>
-        <a href="contact.html" class="grid-item" id="nav3">Option3</a>
+<body id="index-body">
+
+<div id="behind">
+    <div id="b0"><img src="https://media.giphy.com/media/8cp148CwKnciBfzwL7/giphy.gif" width="200px" height="150px"/></div>
+    <div id="index-container">
+        
+        <div id="b1"> <h1>Aagaard</h1> </div>
+        <div class="nav" id="b2">Button 1</div>
+        <div class="nav" id="b3">Button 2</div>
+        <div class="nav" id="b4">Button 3</div>
+        <div class="nav" id="b5">Button 4</div>
     </div>
-    <div>
-            <br>df<br><br><br>dfdf<br><br><br><br><br><br><br>dfdf<br><br><br><br>fdf<br><br><br><br>dfdfd<br><br><br><br>fdf<br><br><br>fdfdf<br><br><br><br>fdf<br><br><br>fdf<br><br><br><br><br><br>fdfd<br><br><br>fdfd<br><br>fdfd<br><br>fdf<br><br>fdfd<br><br><br>fdfd<br><br>fdfd<br><br>fdf<br><br>fdfd<br><br><br>fdfd<br><br>fdfd<br><br>fdf<br>
-        </p>
-    </div>
-</body>
-<footer>
-<div id="foot">
-    <div class="gi1">Company A/S</div>
-    <div class="gi2">Phone: &nbsp; +45 10 00 00 00</div>
-    <div class="gi3">Mail: &nbsp; &nbsp; &nbsp; info@site.dk</div>
-    <div class="gi4">CVR: &nbsp; &nbsp; &nbsp; 36584345</div>
-    <div class="gi5"><img height="40px" width="40px" src="https://png.icons8.com/color/1600/google-maps.png">&nbsp; &nbsp;</div>
-    <div class="gi6">59 Rockcrest St. <br> Panama City, FL 32404</div>
 </div>
+</body>
+
+<footer id="indfoot">
+    <div class="footer-social-icons">
+        <h4 class="_14">Social Media</h4>
+        <ul class="social-icons">
+            <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+            <li><a href="" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
+            <li><a href="" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
+        </ul>
+    
 </footer>
 </html>
