--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <script src="main.js"></script>
 </head>
 <body id="index-body">
@@ -29,10 +31,18 @@
     <div class="footer-social-icons">
         <h4 class="_14">Social Media</h4>
         <ul class="social-icons">
-            <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
-            <li><a href="" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
-            <li><a href="" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
+            <li><a title="Facebook Profil" href="" target="_blank" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+            <li><a title="LinkedIn Profil" href="https://www.linkedin.com/in/daniel-aagaard-37b51b13b" target="_blank" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
+            <li><a title="Google+ Profil" href="" target="_blank" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
+            <li><a title="CodeCademy Profil" href="https://www.codecademy.com/AagaardDaniel" target="_blank">
+                <img src="https://i.imgur.com/hwU61PS.gif" id="codeca" class="social-icon">
+            </img>  
+            </a>
+            </li>
         </ul>
+        <div id="hovers">
+            
+        </div>
     
 </footer>
 </html>
