--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <div class="footer-social-icons">
         <h4 class="_14">Social Media</h4>
         <ul class="social-icons">
-            <li><a title="Facebook Profil" href="" target="_blank" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
-            <li><a title="LinkedIn Profil" href="https://www.linkedin.com/in/daniel-aagaard-37b51b13b" target="_blank" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
-            <li><a title="Google+ Profil" href="" target="_blank" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
+            <li class="somar"><a title="Facebook Profil" href="" target="_blank" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+            <li class="somar"><a title="LinkedIn Profil" href="https://www.linkedin.com/in/daniel-aagaard-37b51b13b" target="_blank" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
+            <li class="somar"><a title="Google+ Profil" href="" target="_blank" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
             <li><a title="CodeCademy Profil" href="https://www.codecademy.com/AagaardDaniel" target="_blank">
                 <img src="https://i.imgur.com/hwU61PS.gif" id="codeca" class="social-icon">
             </img>  
