--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="CSS/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
@@ -20,10 +20,10 @@
     <div id="index-container">
         
         <div id="b1"> <h1>Aagaard</h1> </div>
-        <div class="nav" id="b2">Button 1</div>
-        <div class="nav" id="b3">Button 2</div>
-        <div class="nav" id="b4">Button 3</div>
-        <div class="nav" id="b5">Button 4</div>
+        <div class="nav" id="b2"><a title"WebViewer" href="ww.html" target"_blank">Elevplads<br>( WebViewer )</div>
+        <div class="nav" id="b3"><a title"Online CV" href="/p2.html" target"_blank">Online CV</div>
+        <div class="nav" id="b4"><a title"" href=".html" target"_blank">Button 3</div>
+        <div class="nav" id="b5"><a title"" href=".html" target"_blank">Button 4</div>
     </div>
 </div>
 </body>
