--- a/CV/erfar.html
+++ b/CV/erfar.html
@@ -14,5 +14,18 @@
         <h1 id="ch1"> Erhvervserfaring </h1>
         
     </div>
+    <div id="ch2">
+        <table>
+            <tr>    <td class="th"><strong>Oase Outdoors, Give</strong> - <em>Vikar (Lager)</em></td>
+                  </tr>
+                <tr>    <td class="th"> Juni 2017  -  Juni 2017 </td>    </tr>
+
+                <tr><td>&zwnj;</td></tr>     
+                
+                <tr>    <td class="th"><strong>The Grill, Horsens</strong> - <em>Opvasker</em></td>
+                       </tr>
+                    <tr>    <td class="th"> Nov 2016  -  Feb 2017 </td>    </tr>
+        </table>
+    </div>
 </body>
 </html>
