--- a/p2.html
+++ b/p2.html
@@ -15,11 +15,12 @@
     <div id="cvi">
         <div id="vgi">
             <h1>Daniel Aagaard Online CV</h1>
-        <div class="navbar" id="myNavbar">
+        <div class="navbar">
                 <a href="/CV/erfar.html" target="CVV">Erhvervserfaring  /  Tideligere arbejde</a>
                 <a href="/CV/Udd.html" target="CVV">Uddannelse</a>
                 <a href="/CV/kompe.html" target="CVV">Kompetencer</a>
                 <a href="/CV/udm.html" target="CVV">Udmærkelser</a>
+                <a href="index.html">Main Page (Go back)</a>
               </div>
             <br>
             <iframe name="CVV" height="55%" width="97%"></iframe>
