--- a/CV/erfar.html
+++ b/CV/erfar.html
@@ -16,15 +16,29 @@
     </div>
     <div id="ch2">
         <table>
-            <tr>    <td class="th"><strong>Oase Outdoors, Give</strong> - <em>Vikar (Lager)</em></td>
-                  </tr>
-                <tr>    <td class="th"> Juni 2017  -  Juni 2017 </td>    </tr>
+                <tr><td><hr width="120%"></td><td><hr></td></tr>
 
-                <tr><td>&zwnj;</td></tr>     
-                
-                <tr>    <td class="th"><strong>The Grill, Horsens</strong> - <em>Opvasker</em></td>
-                       </tr>
-                    <tr>    <td class="th"> Nov 2016  -  Feb 2017 </td>    </tr>
+            <tr>    <td rowspan="2"> <a href="http://www.oase-outdoors.dk/da-DK" target="_blank"> <img class="logos" src="/image/oa-outlogo.png" height="55" width="196"></a></td>    
+                <td class="th"><strong>&zwnj; &zwnj; &zwnj; Oase Outdoors, Give</strong> - <em>Vikar (Lager)</em></td>
+                  </tr>
+                <tr>    <td class="th">&zwnj; &zwnj; &zwnj; Juni 2017  -  Juni 2017 </td>    </tr>
+                <tr><td class="invis">&zwnj;</td></tr>
+                <tr><td><hr width="120%"></td><td><hr></td></tr>    
+                <tr><td class="invis">&zwnj;</td></tr>
+                <tr>   <td rowspan="2">  <a href="http://horsens.thegrill.dk/" target="_blank"><img class="logos" src="/image/tglogo2.png" height="55" width="196"></a></td>    
+                    <td class="th"><strong>&zwnj; &zwnj; &zwnj; The Grill, Horsens</strong> - <em>Opvasker</em></td>
+                    </tr>
+                    <tr>    <td class="th">&zwnj; &zwnj; &zwnj; Nov 2016  -  Feb 2017 </td>    </tr>
+                <tr><td class="invis">&zwnj;</td></tr>
+                <tr><td><hr width="120%"></td><td><hr></td></tr>
+                <tr><td class="invis">&zwnj;</td></tr>
+                <tr>    <td rowspan="2"> <a href="http://www.mynewsdesk.com/dk/pressreleases/kiwi-lancerer-kiwi-og-aabner-ny-kaempe-discountbutik-1339308" target="_blank"> <img class="logos" src="/image/kwlogo2.png" height="55" width="196"></a></td>    
+                    <td class="th"><strong>&zwnj; &zwnj; &zwnj; Kiwi+, Horsens</strong> - <em>Serviceassistent / Kassemedarbejder</em></td>
+                        </tr>
+                <tr>   <td class="th">&zwnj; &zwnj; &zwnj; Nov 2015  -  Juli 2016 </td>    </tr>
+                <tr><td class="invis">&zwnj;</td></tr>
+                <tr><td><hr width="120%"></td><td><hr></td></tr>
+                <tr><td class="invis">&zwnj;</td></tr>
         </table>
     </div>
 </body>
