--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="b1"> <h1>Aagaard</h1> </div>
         <div class="nav" id="b2"><a title"WebViewer" href="ww.html" target"_blank">Elevplads<br>( WebViewer )</div>
         <div class="nav" id="b3"><a title"Online CV" href="/p2.html" target"_blank">Online CV</div>
-        <div class="nav" id="b4"><a title"" href=".html" target"_blank">Button 3</div>
+        <div class="nav" id="b4"><a title"Calculator" href="calculator.html" target"_blank">Calculator</div>
         <div class="nav" id="b5"><a title"" href=".html" target"_blank">Button 4</div>
     </div>
 </div>
