--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         
         <div id="b1"> <h1>Aagaard</h1> </div>
         <div class="nav" id="b2"><a title"WebViewer" href="ww.html" target"_blank">Elevplads<br>( WebViewer )</div>
-        <div class="nav" id="b3"><a title"Online CV" href="/p2.html" target"_blank">Online CV</div>
+        <div class="nav" id="b3"><a title"Online CV" href="p2.html" target"_blank">Online CV</div>
         <div class="nav" id="b4"><a title"Calculator" href="calculator.html" target"_blank">Calculator</div>
-        <div class="nav" id="b5"><a title"" href=".html" target"_blank">Button 4</div>
+        <div class="nav" id="b5"><a title"Calculator v2" href="newcalculator.html" target"_blank">Calculator v2</div>
     </div>
 </div>
 </body>
