--- a/calculator.html
+++ b/calculator.html
@@ -6,36 +6,10 @@
     <title>Calc</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="CSS/cal.css" />
-    <script>
-        function insert(num){
-            document.form.textview.value = document.form.textview.value+num
-            }
-
-        function chgclr(ctr){
-            for(let te = 0;te < 19; te++){
-                let ar = ["chgg1","chgg2","chgg3","chgg4","chgg5","chgg6","chgg7","chgg8","chgg9","chgg10","chgg11","chgg12","chgg13","chgg14","chgg15","chgg16","nulknap","ansbox","bhndansbox"]
-                document.getElementById(ar[te]).style.backgroundColor = ctr;
-                }
-            }
-
-        function chgcalclr(crr){
-            document.getElementById('fullcal').style.backgroundColor = crr;
-        }
-
-        function chgtxtclr(crt){
-            for(let tee = 0;tee < 19; tee++){
-                let arr = ["chgg1","chgg2","chgg3","chgg4","chgg5","chgg6","chgg7","chgg8","chgg9","chgg10","chgg11","chgg12","chgg13","chgg14","chgg15","chgg16","nulknap","ansbox","bhndansbox"]
-                document.getElementById(arr[tee]).style.color = crt;
-                }
-        }
-
-        function chgbckclr(tcr){
-            document.body.style.backgroundColor = tcr;
-        }
-    </script>
+    <script src="JS/calculatorpage.js"></script>
 </head>
-<body>
-    <div class="main" id="fullcal">
+<body id="fullcal">
+    <div class="main">
         <div class="viewbox" id="bhndansbox" name="boxes">
         <form name="form">
             <input class="textview" id="ansbox" name = "textview" autofocus autocomplete="off">
