--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li class="somar"><a title="LinkedIn Profil" href="https://www.linkedin.com/in/daniel-aagaard-37b51b13b" target="_blank" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
             <li class="somar"><a title="Google+ Profil" href="" target="_blank" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
             <li><a title="CodeCademy Profil" href="https://www.codecademy.com/AagaardDaniel" target="_blank">
-                <img src="https://i.imgur.com/hwU61PS.gif" id="codeca" class="social-icon">
+                <img src="/image/codecalogo.png" id="codeca" class="social-icon">
             </img>  
             </a>
             </li>
