--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="CSS/main.css" />
     <link href="https://fonts.googleapis.com/css?family=Lato|Questrial|Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="/image/faces.png" type="image/x-icon">
 </head>
 <body id="index-body">
 
