--- a/Projekter/1stSite/p2.html
+++ b/Projekter/1stSite/p2.html
@@ -13,7 +13,7 @@
     <script src="main.html"></script>
 </head>
 <body>
-    <div id="bgi"> <img src="image/photographer.jpg" width="100%" height="100%"> </div>
+    <div id="bgi"> <img src="image/photographer.jpg" width="100%" alt="Background" height="100%"> </div>
 
     <div id="cvi">
         <div id="vgi">
