--- a/Projekter/CoinClicker/index.html
+++ b/Projekter/CoinClicker/index.html
@@ -18,7 +18,7 @@
         </div>
 
     <div id="ud-plus-knap">
-        <img src="./image/Bitcoin.png" id="plus-knap" 
+        <img src="./image/Bitcoin.png" id="plus-knap" alt="COIN" 
         type="button" onclick="clicker(1)"></img>
     </div>
 
