--- a/Projekter/CustomHTML/index.html
+++ b/Projekter/CustomHTML/index.html
@@ -14,7 +14,7 @@
     <h3 id="h3-text">H3 text</h3>
     <p id="p-text">P text</p>
     <span>
-        <img src="./Fotos/plusImgIcon.png" id="shownImage" title="Insert image">
+        <img src="./Fotos/plusImgIcon.png" id="shownImage" title="Insert image" alt="Add image">
         <div id="urlInput">
             <input type="text" placeholder="Image URL" id="newerImage">
             <input type="text" placeholder="Height" id="newerImageH" size="3">
