--- a/Projekter/OnlineCV/CV/Udd.html
+++ b/Projekter/OnlineCV/CV/Udd.html
@@ -16,7 +16,7 @@
             <tr><td colspan="3"><hr></td></tr>
 
             <tr>
-                <td rowspan="2">  <a href="https://www.sde.dk/" target="_blank"><img class="logos" src="../../../Billeder/sde-logo.png" height="60" width="100"></a></td>    
+                <td rowspan="2">  <a href="https://www.sde.dk/" target="_blank"><img class="logos" src="../../../Billeder/sde-logo.png" alt="SDE logo" height="60" width="100"></a></td>    
                 <td class="th" colspan="2"><strong>Syddansk Erhvervsskole</strong> - <em>Skolepraktik<em></em></td>
             </tr>
 
@@ -28,7 +28,7 @@
             <tr><td colspan="3"><hr></td></tr>
 
             <tr>
-                <td rowspan="2">  <a href="https://www.sde.dk/" target="_blank"><img class="logos" src="../../../Billeder/sde-logo.png" height="60" width="100"></a></td>    
+                <td rowspan="2">  <a href="https://www.sde.dk/" target="_blank"><img class="logos" src="../../../Billeder/sde-logo.png" alt="SDE logo" height="60" width="100"></a></td>    
                 <td class="th" colspan="2"><strong>Syddansk Erhvervsskole</strong> - <em>Grundforløb 2</em></td>
             </tr>
 
@@ -40,7 +40,7 @@
             <tr><td colspan="3"><hr></td></tr>
 
             <tr>
-                <td rowspan="2">  <a href="http://komung.dk/" target="_blank"><img class="logos" src="../../../Billeder/kuu-logo2.png" height="60" width="100"></a></td>    
+                <td rowspan="2">  <a href="http://komung.dk/" target="_blank"><img class="logos" src="../../../Billeder/kuu-logo2.png" alt="KUU logo" height="60" width="100"></a></td>    
                 <td class="th" colspan="2"><strong>Kombineret Ungdomsuddannelse</strong> - <em>Handel og Kundeservice</em></td>
             </tr>
 
@@ -52,7 +52,7 @@
             <tr><td colspan="3"><hr></td></tr>
 
             <tr>
-                <td rowspan="2">  <a href="https://www.learnmark.dk/uddannelser/step-10/" target="_blank"><img class="logos" src="../../../Billeder/lsh-logo2.png" height="60" width="100"></a></td>    
+                <td rowspan="2">  <a href="https://www.learnmark.dk/uddannelser/step-10/" target="_blank"><img class="logos" src="../../../Billeder/lsh-logo2.png" alt="LM Logo" height="60" width="100"></a></td>    
                 <td class="th" colspan="2"><strong>Learnmark Step10</strong> - <em>10 klasse</em></td>
             </tr>
 
