--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="dk">
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Homepage</title>
+    <title>Daniel Aagaard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#317EFB"/>
+    <meta name="description" content="Personlig hjemmeside af Daniel Aagaard. Den indeholder alle udførte projekter i HTML/CSS/JS">
+    <meta property="og:title" content="Daniel Aagaard" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.danielaagaard.com/" />
+    <meta property="og:image" content="./Billeder/website-login-background.jpeg" />
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link href="https://fonts.googleapis.com/css?family=Lato|Questrial|Ubuntu" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" href="/image/faces.png" type="image/x-icon">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="icon" href="./Billeder/faces.png" type="image/x-icon">
     <script src="./main.js"></script>
+    <noscript>Your browser does not support JavaScript!</noscript>
 </head>
 <body id="index-body">
 
@@ -50,7 +56,7 @@
             </li>
             <li class="somar"><a title="Google+ Profil" href="" target="_blank" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
             <li><a title="CodeCademy Profil" href="https://www.codecademy.com/AagaardDaniel" target="_blank">
-                <img src="/Billeder/codecalogo.png" id="codeca" class="social-icon">
+                <img src="/Billeder/codecalogo.png" id="codeca" alt="Codecademy" class="social-icon">
             </img>  
             </a>
             </li>
