--- a/Projekter/1stSite/index-2.html
+++ b/Projekter/1stSite/index-2.html
@@ -17,7 +17,7 @@
 <body id="index-body">
 
 <div id="behind">
-    <div id="b0"><img src="image/frontpoint.gif" width="200px" height="150px"/></div>
+    <div id="b0"><img src="image/frontpoint.gif" width="200px" height="150px" alt="Could not display GIF"/></div>
     <div id="index-container">
         <div id="b1"> <h1>Aagaard</h1> </div>
         <div class="nav" id="b2"><a title="WebViewer" href="ww.html" target"_blank">Elevplads<br>( WebViewer )</div>
@@ -35,7 +35,7 @@
             <li class="somar"><a title="LinkedIn Profil" href="https://www.linkedin.com/in/daniel-aagaard-37b51b13b" target="_blank" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
             <li class="somar"><a title="Google+ Profil" href="#" target="_blank" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
             <li><a title="CodeCademy Profil" href="https://www.codecademy.com/AagaardDaniel" target="_blank">
-                <img src="image/codecalogo.png" id="codeca" class="social-icon">
+                <img src="image/codecalogo.png" id="codeca" class="social-icon" alt="Codecademy">
             </img>  
             </a>
             </li>
