--- a/Projekter/Vendespil/index.html
+++ b/Projekter/Vendespil/index.html
@@ -13,37 +13,37 @@
     <button id="start-btn" onclick="gameStart()">Start</button>
 
     <div class="grid-container">
-        <div class="item1"><img id="img1" src="" width="150px;" height="150px;" 
+        <div class="item1"><img id="img1" alt="blank space" src="" width="150px;" height="150px;" 
             onerror="this.src='./pics/black.png'" onclick="Chooser(1)"></div>
-        <div class="item2"><img id="img2" src="" width="150px;" height="150px;" 
+        <div class="item2"><img id="img2" alt="blank space" src="" width="150px;" height="150px;" 
             onerror="this.src='./pics/black.png'" onclick="Chooser(2)"></div>
-        <div class="item3"><img id="img3" src="" width="150px;" height="150px;" 
+        <div class="item3"><img id="img3" alt="blank space" src="" width="150px;" height="150px;" 
             onerror="this.src='./pics/black.png'" onclick="Chooser(3)"></div>
-        <div class="item4"><img id="img4" src="" width="150px;" height="150px;" 
+        <div class="item4"><img id="img4" alt="blank space" src="" width="150px;" height="150px;" 
             onerror="this.src='./pics/black.png'" onclick="Chooser(4)"></div>
-        <div class="item5"><img id="img5" src="" width="150px;" height="150px;" 
+        <div class="item5"><img id="img5" alt="blank space" src="" width="150px;" height="150px;" 
             onerror="this.src='./pics/black.png'" onclick="Chooser(5)"></div>
-        <div class="item6"><img id="img6" src="" width="150px;" height="150px;" 
+        <div class="item6"><img id="img6" alt="blank space" src="" width="150px;" height="150px;" 
             onerror="this.src='./pics/black.png'" onclick="Chooser(6)"></div>
-        <div class="item7"><img id="img7" src="" width="150px;" height="150px;" 
+        <div class="item7"><img id="img7" alt="blank space" src="" width="150px;" height="150px;" 
             onerror="this.src='./pics/black.png'" onclick="Chooser(7)"></div>
-        <div class="item8"><img id="img8" src="" width="150px;" height="150px;" 
+        <div class="item8"><img id="img8" alt="blank space" src="" width="150px;" height="150px;" 
             onerror="this.src='./pics/black.png'" onclick="Chooser(8)"></div>
-        <div class="item9"><img id="img9" src="" width="150px;" height="150px;" 
+        <div class="item9"><img id="img9" alt="blank space" src="" width="150px;" height="150px;" 
             onerror="this.src='./pics/black.png'" onclick="Chooser(9)"></div>
-        <div class="item10"><img id="img10" src="" width="150px;" height="150px;" 
+        <div class="item10"><img id="img10" alt="blank space" src="" width="150px;" height="150px;" 
             onerror="this.src='./pics/black.png'" onclick="Chooser(10)"></div>
-        <div class="item11"><img id="img11" src="" width="150px;" height="150px;" 
+        <div class="item11"><img id="img11" alt="blank space" src="" width="150px;" height="150px;" 
             onerror="this.src='./pics/black.png'" onclick="Chooser(11)"></div>
-        <div class="item12"><img id="img12" src="" width="150px;" height="150px;" 
+        <div class="item12"><img id="img12" alt="blank space" src="" width="150px;" height="150px;" 
             onerror="this.src='./pics/black.png'" onclick="Chooser(12)"></div>
-        <div class="item13"><img id="img13" src="" width="150px;" height="150px;" 
+        <div class="item13"><img id="img13" alt="blank space" src="" width="150px;" height="150px;" 
             onerror="this.src='./pics/black.png'" onclick="Chooser(13)"></div>
-        <div class="item14"><img id="img14" src="" width="150px;" height="150px;" 
+        <div class="item14"><img id="img14" alt="blank space" src="" width="150px;" height="150px;" 
             onerror="this.src='./pics/black.png'" onclick="Chooser(14)"></div>
-        <div class="item15"><img id="img15" src="" width="150px;" height="150px;" 
+        <div class="item15"><img id="img15" alt="blank space" src="" width="150px;" height="150px;" 
             onerror="this.src='./pics/black.png'" onclick="Chooser(15)"></div>
-        <div class="item16"><img id="img16" src="" width="150px;" height="150px;" 
+        <div class="item16"><img id="img16" alt="blank space" src="" width="150px;" height="150px;" 
             onerror="this.src='./pics/black.png'" onclick="Chooser(16)"></div>
 
     </div>
