--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link href="https://fonts.googleapis.com/css?family=Lato|Questrial|Ubuntu" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="preloader.css" rel="stylesheet">
     <link rel="icon" href="./Billeder/faces.png" type="image/x-icon">
     <script src="./main.js"></script>
     <noscript>Your browser does not support JavaScript!</noscript>
@@ -21,7 +22,7 @@
 
 <div id="behind">
     <div id="index-container">
-        <div id="b001"> <h1>Daniel</h1></div>
+        <div id="b001"> <h1>Danie</h1></div>
         <div id="b1"> <h1>Aagaard</h1><h4>Personlig side</h4></div>
             <a class="nava nav" id="b2"  title="Online CV"  href="/Projekter/OnlineCV/OnlineCV.html" target"_blank"><div>OM MIG (ONLINE CV)  </div></a>
             <a class="nava nav" id="b3"  title="Knap6"  href="/Projekter/1stSite/index.html" target"_blank"><div>Første hjemmeside   </div></a>
@@ -63,4 +64,5 @@
         </ul>
 </footer>
 <a id="refer"href="https://www.freepik.com/free-photos-vectors/background">Background photo created by <br> www.slon.pics - www.freepik.com</a>
+<script src="preloader.js"></script>
 </html>
