--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link href="https://fonts.googleapis.com/css?family=Lato|Questrial|Ubuntu" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="preloader.css" rel="stylesheet">
+    <link href="./Assets/Preloader-master/preloader.css" rel="stylesheet">
     <link rel="icon" href="./Billeder/faces.png" type="image/x-icon">
     <script src="./main.js"></script>
     <noscript>Your browser does not support JavaScript!</noscript>
@@ -64,5 +64,5 @@
         </ul>
 </footer>
 <a id="refer"href="https://www.freepik.com/free-photos-vectors/background">Background photo created by <br> www.slon.pics - www.freepik.com</a>
-<script src="preloader.js"></script>
+<script src="./Assets/Preloader-master/preloader.js"></script>
 </html>
