--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div id="behind">
     <div id="index-container">
-        <div id="b001"> <h1>Danie</h1></div>
+        <div id="b001"> <h1>Daniel</h1></div>
         <div id="b1"> <h1>Aagaard</h1><h4>Personlig side</h4></div>
             <a class="nava nav" id="b2"  title="Online CV"  href="/Projekter/OnlineCV/OnlineCV.html" target"_blank"><div>OM MIG (ONLINE CV)  </div></a>
             <a class="nava nav" id="b3"  title="Knap6"  href="/Projekter/1stSite/index.html" target"_blank"><div>Første hjemmeside   </div></a>
