--- a/index.html
+++ b/index.html
@@ -1,67 +1,55 @@
 <!DOCTYPE html>
 <html lang="dk">
 <head>
-    <meta charset="utf-8" />
-    <title>Daniel Aagaard</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#317EFB"/>
-    <meta name="description" content="Personlig hjemmeside af Daniel Aagaard. Den indeholder alle udførte projekter i HTML/CSS/JS">
-    <meta property="og:title" content="Daniel Aagaard" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://www.danielaagaard.com/" />
-    <meta property="og:image" content="./Billeder/website-login-background.jpeg" />
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Lato|Questrial|Ubuntu" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="./Assets/Preloader-master/preloader.css" rel="stylesheet">
-    <link rel="icon" href="./Billeder/faces.png" type="image/x-icon">
-    <script src="./main.js"></script>
-    <noscript>Your browser does not support JavaScript!</noscript>
+  <meta charset="utf-8" />
+  <title>Daniel Aagaard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#317EFB"/>
+  <meta name="description" content="Personlig hjemmeside af Daniel Aagaard. Den indeholder alle udførte projekter i HTML/CSS/JS">
+  <meta property="og:title" content="Daniel Aagaard" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://www.danielaagaard.com/" />
+  <meta property="og:image" content="./Billeder/website-login-background.jpeg" />
+  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  <link href="https://fonts.googleapis.com/css?family=Lato|Questrial|Ubuntu" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="./Assets/Preloader-master/preloader.css" rel="stylesheet">
+  <link rel="icon" href="./Billeder/faces.png" type="image/x-icon">
+  <script src="./main.js"></script>
+  <noscript>Din browser understøtter ikke JavaScript!</noscript>
 </head>
 <body id="index-body">
-
 <div id="behind">
-    <div id="index-container">
-        <div id="b001"> <h1>Daniel</h1></div>
-        <div id="b1"> <h1>Aagaard</h1><h4>Personlig side</h4></div>
-            <a class="nava nav" id="b2"  title="Online CV"  href="/Projekter/OnlineCV/OnlineCV.html" target"_blank"><div>OM MIG (ONLINE CV)  </div></a>
-            <a class="nava nav" id="b3"  title="Knap6"  href="/Projekter/1stSite/index.html" target"_blank"><div>Første hjemmeside   </div></a>
-            <a class="nava nav" id="b4"  title="Knap2"  href="/Projekter/CustomHTML/index.html" target"_blank"><div>Custom HTML side    </div></a>
-            <a class="nava nav" id="b5"  title="Knap3"  href="/Projekter/CustomCalculator/calculator.html" target"_blank"><div>Custom Calculator   </div></a>
-            <a class="nava nav" id="b6"  title="Knap4"  href="/Projekter/SimpleCalculator/newcalculator.html" target"_blank"><div>Simple Calculator   </div></a>
-            <a class="nava nav" id="b7"  title="Knap5"  href="/Projekter/JobSearch/ww.html" target"_blank"><div>Jobsøgning          </div></a>
-            
-            <!--  !!!! KNAP !!!!   <a class="nava nav" id="b7"  title="Knap6"  href="" target"_blank"><div>Knap6               </div></a> -->
-            <div class="dropdown">
-                    <button class="dropbtn nav nava">JavaScript Spil</button>
-                    <div class="dropdown-content">
-                      <a class="nav dropdwnOpt" href="/Projekter/Vendespil/index.html" title="knap10-1">Vendespil</a>
-                      <a class="nav dropdwnOpt" href="/Projekter/CanvasGame/index.html" title="knap10-2">2D Canvas</a>
-                      <a class="nav dropdwnOpt" href="/Projekter/CoinClicker/index.html" title="knap10-3">Coin Click</a>
-                    </div>
-                  </div>       
-        </div>
-    </div>
+  <div id="index-container">
+  <div id="b001"> <h1>Daniel</h1></div>
+  <div id="b1"> <h2>Aagaard</h2><h3>Personlig side</h3></div>
+    <a class="nava nav" id="b2"  title="Online CV"  href="/Projekter/OnlineCV/OnlineCV.html" target"_blank">Daniel Aagaard (CV)</a>
+    <a class="nava nav" id="b3"  title="Første Projekt-hjemmeside"  href="/Projekter/1stSite/index.html" target"_blank">Første hjemmeside</a>
+    <a class="nava nav" id="b4"  title="Simpel HTML-side med justerbare elementer"  href="/Projekter/CustomHTML/index.html" target"_blank">Custom HTML side</a>
+    <a class="nava nav" id="b5"  title="Simpel Justerbar Lommeregner"  href="/Projekter/CustomCalculator/calculator.html" target"_blank">Custom Calculator</a>
+    <a class="nava nav" id="b6"  title="Simpel Moderne Lommeregner"  href="/Projekter/SimpleCalculator/newcalculator.html" target"_blank">Simple Calculator</a>
+    <a class="nava nav" id="b7"  title="Side med links til Jobsøgning / Elevpladssøgning"  href="/Projekter/JobSearch/ww.html" target"_blank">Jobsøgning</a>
+    <!--!!KNAP!!<a class="nava nav"id="b7"title="Knap6"href=""target"_blank"><div>Knap6</div></a>-->
+    <div class="dropdown">
+      <button class="dropbtn nav nava">JavaScript Spil</button>
+      <div class="dropdown-content">
+        <a class="nav dropdwnOpt" href="/Projekter/Vendespil/index.html" title="Simpelt Vendespil lavet i HTML, CSS & JavaScript">Vendespil</a>
+        <a class="nav dropdwnOpt" href="/Projekter/CanvasGame/index.html" title="2D Møntsamler-spil lavet i HTML, CSS & JavaScript">2D Canvas</a>
+        <a class="nav dropdwnOpt" href="/Projekter/CoinClicker/index.html" title="Simpel Mønt-klikker lavet i HTML, CSS & JavaScript">Coin Click</a>
+      </div>
+    </div>       
+  </div>
+</div>
 </body>
 <footer id="indfoot">
-    <div class="footer-social-icons">
-        <h4 class="_14">Social Media</h4>
-        <ul class="social-icons">
-            <li class="somar">
-                <a title="Facebook Profil" href="" target="_blank" class="social-icon"> <i class="fa fa-facebook"></i></a>
-            </li>
-            <li class="somar">
-                <a title="LinkedIn Profil" href="https://www.linkedin.com/in/daniel-aagaard-37b51b13b" target="_blank" class="social-icon">
-                    <i class="fa fa-linkedin"></i>
-                </a>
-            </li>
-            <li class="somar"><a title="Google+ Profil" href="" target="_blank" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
-            <li><a title="CodeCademy Profil" href="https://www.codecademy.com/AagaardDaniel" target="_blank">
-                <img src="/Billeder/codecalogo.png" id="codeca" alt="Codecademy" class="social-icon">
-            </img>  
-            </a>
-            </li>
-        </ul>
+  <div class="footer-social-icons">
+    <h4 class="_14">Social Media</h4>
+    <ul class="social-icons">
+      <li class="somar"> <a title="Facebook Profil" href="https://www.facebook.com/xDanielAagaard" target="_blank" class="social-icon"> <i class="fa fa-facebook"></i></a> </li>
+      <li class="somar"> <a title="LinkedIn Profil" href="https://www.linkedin.com/in/daniel-aagaard-37b51b13b" target="_blank" class="social-icon"> <i class="fa fa-linkedin"></i> </a> </li>
+      <li class="somar"><a title="Google+ Profil" href="https://plus.google.com/u/0/101819956430496086601" target="_blank" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
+      <li><a title="CodeCademy Profil" href="https://www.codecademy.com/AagaardDaniel" target="_blank"> <img src="/Billeder/codecalogo.png" id="codeca" alt="Daniel Aagaard Codecademy" class="social-icon"> </img> </a> </li>
+    </ul>
 </footer>
 <a id="refer"href="https://www.freepik.com/free-photos-vectors/background">Background photo created by <br> www.slon.pics - www.freepik.com</a>
 <script src="./Assets/Preloader-master/preloader.js"></script>
