--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div id="behind">
   <div id="index-container">
   <div id="b001"> <h1>Daniel</h1></div>
-  <div id="b1"> <h2>Aagaard</h2><h3>Personlig side</h3></div>
+  <div id="b1"> <h2>Aagaard</h2><h3>Projekt side</h3></div>
     <a class="nava nav" id="b2"  title="Online CV"  href="/Projekter/OnlineCV/OnlineCV.html" target"_blank">Daniel Aagaard (CV)</a>
     <a class="nava nav" id="b3"  title="Første Projekt-hjemmeside"  href="/Projekter/1stSite/index.html" target"_blank">Første hjemmeside</a>
     <a class="nava nav" id="b4"  title="Simpel HTML-side med justerbare elementer"  href="/Projekter/CustomHTML/index.html" target"_blank">Custom HTML side</a>
