--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <div id="behind">
   <div id="index-container">
   <div id="b001"> <h1>Daniel</h1></div>
-  <div id="b1"> <h2>Aagaard</h2><h3>Projekt side</h3></div>
+  <div id="b1"> <h2>Aagaard</h2> <h3>Projekt side</h3> </div>
     <a class="nava nav" id="b2"  title="Online CV"  href="/Projekter/OnlineCV/OnlineCV.html" target"_blank">Daniel Aagaard (CV)</a>
-    <a class="nava nav" id="b3"  title="Første Projekt-hjemmeside"  href="/Projekter/1stSite/index.html" target"_blank">Første hjemmeside</a>
+    <a class="nava nav" id="b3"  title="Første Projekt-hjemmeside"  href="/Projekter/1stSite/index.html" target"_blank">Første projektside</a>
     <a class="nava nav" id="b4"  title="Simpel HTML-side med justerbare elementer"  href="/Projekter/CustomHTML/index.html" target"_blank">Custom HTML side</a>
     <a class="nava nav" id="b5"  title="Simpel Justerbar Lommeregner"  href="/Projekter/CustomCalculator/calculator.html" target"_blank">Custom Calculator</a>
     <a class="nava nav" id="b6"  title="Simpel Moderne Lommeregner"  href="/Projekter/SimpleCalculator/newcalculator.html" target"_blank">Simple Calculator</a>
@@ -48,7 +48,7 @@
       <li class="somar"> <a title="Facebook Profil" href="https://www.facebook.com/xDanielAagaard" target="_blank" class="social-icon"> <i class="fa fa-facebook"></i></a> </li>
       <li class="somar"> <a title="LinkedIn Profil" href="https://www.linkedin.com/in/daniel-aagaard-37b51b13b" target="_blank" class="social-icon"> <i class="fa fa-linkedin"></i> </a> </li>
       <li class="somar"><a title="Google+ Profil" href="https://plus.google.com/u/0/101819956430496086601" target="_blank" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
-      <li><a title="CodeCademy Profil" href="https://www.codecademy.com/AagaardDaniel" target="_blank"> <img src="/Billeder/codecalogo.png" id="codeca" alt="Daniel Aagaard Codecademy" class="social-icon"> </img> </a> </li>
+      <li><a title="CodeCademy Profil" href="https://www.codecademy.com/AagaardDaniel" target="_blank"> <img src="/Billeder/codecalogo.png" id="codeca" alt="Daniel Aagaard Codecademy Projekt" class="social-icon"> </img> </a> </li>
     </ul>
 </footer>
 <a id="refer"href="https://www.freepik.com/free-photos-vectors/background">Background photo created by <br> www.slon.pics - www.freepik.com</a>
