--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Daniel Aagaard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#317EFB"/>
-  <meta name="description" content="Personlig hjemmeside af Daniel Aagaard. Den indeholder alle udførte projekter i HTML/CSS/JS">
+  <meta name="description" content="Personlig projekt-hjemmeside af Daniel Aagaard. Den indeholder alle udførte projekter i HTML/CSS/JS">
   <meta property="og:title" content="Daniel Aagaard" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://www.danielaagaard.com/" />
