--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Daniel Aagaard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#317EFB"/>
-  <meta name="description" content="Personlig projekt-hjemmeside af Daniel Aagaard. Den indeholder alle udførte projekter i HTML/CSS/JS">
+  <meta name="description" content="Personlig projekt hjemmeside af Daniel Aagaard. Den indeholder alle udførte projekter i HTML/CSS/JS">
   <meta property="og:title" content="Daniel Aagaard" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://www.danielaagaard.com/" />
@@ -21,8 +21,8 @@
 <body id="index-body">
 <div id="behind">
   <div id="index-container">
-  <div id="b001"> <h1>Daniel</h1></div>
-  <div id="b1"> <h2>Aagaard</h2> <h3>Projekt side</h3> </div>
+  <div id="b001"> <h1>Daniel Aagaard</h1></div>
+  <div id="b1"> <h2>Rasmussen</h2> <h3>Projekt side</h3> </div>
     <a class="nava nav" id="b2"  title="Online CV"  href="/Projekter/OnlineCV/OnlineCV.html" target"_blank">Daniel Aagaard (CV)</a>
     <a class="nava nav" id="b3"  title="Første Projekt-hjemmeside"  href="/Projekter/1stSite/index.html" target"_blank">Første projektside</a>
     <a class="nava nav" id="b4"  title="Simpel HTML-side med justerbare elementer"  href="/Projekter/CustomHTML/index.html" target"_blank">Custom HTML side</a>
