Google verification for tests

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://www.danielaagaard.com/" />
   <meta property="og:image" content="./Billeder/website-login-background.jpeg" />
+  <meta name="google-site-verification" content="MIS9MesDCYvruXgTaGijS4sFj2I1tfeWRzPrqUKtsAw"/>
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   <link href="https://fonts.googleapis.com/css?family=Lato|Questrial|Ubuntu" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
